# nixy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_ja.md  demo.tape  flake.nix  install.sh  nbrew  nixy  test_nixy.sh
.claude/: settings.json
.claude/commands/: feedback-loop.md
.githooks/: pre-commit
.github/workflows/: auto-tag.yml  release.yml  test.yml
examples/: neovim-nightly.nix
scripts/: pr-feedback-loop.sh
src/: cli.rs  config.rs  error.rs  main.rs  migration.rs  nix.rs  nixhub.rs  nixy_config.rs  profile.rs  rollback.rs  state.rs
src/commands/: completions.rs  config.rs  file.rs  gc.rs  install.rs  list.rs  mod.rs  profile.rs  search.rs  self_upgrade.rs  sync.rs  uninstall.rs  update.rs  upgrade.rs  version.rs
src/completions/: nixy.bash  nixy.zsh
src/flake/: editor.rs  mod.rs  parser.rs  template.rs
tests/: integration.rs
