[package]
name = "nixy-rs"
version = "0.1.7"
edition = "2021"
rust-version = "1.80"
description = "Homebrew-style wrapper for Nix using flake.nix"
license = "MIT"
repository = "https://github.com/yusukeshib/nixy"

[[bin]]
name = "nixy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "5"
thiserror = "2"
colored = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
self_update = { version = "0.42", default-features = false, features = ["rustls"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
