[package]
name = "nixy-rs"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
description = "Homebrew-style wrapper for Nix using flake.nix"
license = "MIT"
repository = "https://github.com/yusukeshib/nixy"

[[bin]]
name = "nixy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "5"
thiserror = "2"
colored = "2"
regex = "1"
rnix = "0.11"
rowan = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
self_update = { version = "0.42", default-features = false, features = ["rustls"] }
ctrlc = "3"
dialoguer = "0.12"
ureq = { version = "2", features = ["json"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
